Fixed buttons not showing up on some browsers

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ section {
   justify-content: center;
   margin-top: 1rem;
   gap: 1rem;
+  margin-bottom: 2rem;
 }
 
 /* icons */
@@ -489,4 +490,43 @@ body {
     background-color: rgb(0, 100, 92);
   }
 
+  .btn-color-1:hover, .btn-color-2:hover {
+    background: rgb(0, 100, 92);
+    color: white; 
+  }
+  
+  .btn-color-2:hover {
+    background: none;
+    border: rgb(0, 100, 92) 0.1rem solid;
+    color: white; 
+  }
+
+  .btn-color-2 {
+    background: none;
+    border: rgb(0, 100, 92) 0.1rem solid;
+    color: black; 
+  }
+  
+  .btn-color-2:hover {
+    background: none;
+    border: rgb(0, 100, 92) 0.1rem solid;
+    color: black;
+  }
+
+  .btn {
+    text-decoration: none; 
+    color: black; 
+    border: rgb(0, 100, 92) 0.1rem solid; 
+    background-color: white; 
+    transition: background-color 300ms ease, color 300ms ease; 
+  }
+  
+  .btn:hover {
+    text-decoration: underline; 
+    text-decoration-color: rgb(0, 100, 92); 
+    background-color: rgb(0, 100, 92); 
+    color: white; 
+  }
+  
+  
   
